[gd_scene load_steps=7 format=3 uid="uid://cntul2jy054a8"]

[ext_resource type="Script" path="res://planets/uranus/uranus.gd" id="1_xbgjy"]
[ext_resource type="PackedScene" uid="uid://sc8xm7aym51d" path="res://player/player.tscn" id="2_t4y1b"]
[ext_resource type="Texture2D" uid="uid://bmxowqwctb54t" path="res://pics/bg/mercury_background.png" id="3_pn5oo"]
[ext_resource type="Texture2D" uid="uid://dmwqoxayeudod" path="res://pics/mockup/Red_circle.svg.png" id="4_ycyjq"]
[ext_resource type="PackedScene" uid="uid://bob5f2sxvlmc0" path="res://player/player_interface.tscn" id="5_5abvl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4kbna"]
radius = 30.5941

[node name="uranus" type="Node2D"]
script = ExtResource("1_xbgjy")
player = ExtResource("2_t4y1b")

[node name="bg" type="Sprite2D" parent="."]
self_modulate = Color(0, 1, 1, 1)
position = Vector2(571, 313)
texture = ExtResource("3_pn5oo")

[node name="spawn_player" type="Marker2D" parent="."]
position = Vector2(583, 495)

[node name="takeoff" type="Area2D" parent="spawn_player" groups=["takeoff"]]

[node name="takeoff" type="Sprite2D" parent="spawn_player/takeoff"]
scale = Vector2(0.083, 0.083)
texture = ExtResource("4_ycyjq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/takeoff"]
shape = SubResource("CircleShape2D_4kbna")

[node name="player_interface" parent="." instance=ExtResource("5_5abvl")]

[connection signal="area_entered" from="spawn_player/takeoff" to="." method="_on_takeoff_area_entered"]
[connection signal="area_exited" from="spawn_player/takeoff" to="." method="_on_takeoff_area_exited"]
